--- a/package.json
+++ b/package.json
@@ -1,26 +1,52 @@
 {
   "name": "templit",
   "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+  "description": "Template rendering engine with frontmatter support — Handlebars, Mustache, and Liquid",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
+    }
   },
+  "files": [
+    "dist",
+    "src"
+  ],
+  "scripts": {
+    "build": "tsup",
+    "dev:lib": "tsup --watch",
+    "dev:web": "npm run dev --workspace=web",
+    "dev": "npm run dev:web",
+    "typecheck": "tsc --noEmit"
+  },
+  "workspaces": [
+    "web"
+  ],
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.16"
+    "gray-matter": "4.0.3",
+    "handlebars": "4.7.8",
+    "js-yaml": "4.1.0",
+    "liquidjs": "10.21.1",
+    "marked": "16.3.0",
+    "mustache": "4.2.0"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.16"
-  }
+    "@types/js-yaml": "^4",
+    "@types/mustache": "^4",
+    "tsup": "^8",
+    "typescript": "^5"
+  },
+  "keywords": [
+    "template",
+    "rendering",
+    "handlebars",
+    "mustache",
+    "liquid",
+    "frontmatter",
+    "markdown"
+  ],
+  "license": "MIT"
 }
